# agent-school

./: .env.example  .gitignore  README.md  luma_browser.py  main.py  pyproject.toml
.claude/: settings.local.json
agent_school/: __init__.py  config.py  documentation_generator.py  function_creator.py  optimized_prompts.py  plan_generator.py  workflow_generator.py
agent_school/certification/: __init__.py  action_logger.py  cert_registry.py  certification.py  certified_executor.py  doc_ingester.py  doc_store.py  drift_detector.py  explorer.py  synthesizer.py
agent_school/core/: __init__.py  agent_planner.py  deterministic_generator.py  executor.py  registry.py  router.py  validator.py
agent_school/entities/: __init__.py  entity_registry.py
agent_school/utils/: __init__.py  browser_helper.py  code_validator.py  logger.py
backend/core/: __init__.py  llm_client.py
backend/generators/: __init__.py  plan_generator.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md
tests/: __init__.py  conftest.py  test_code_validator.py  test_config.py  test_deterministic_generator.py  test_integration.py  test_plan_generator.py  test_registry.py
workflows/: registry.json
workflows/agent_plans/personalized_event_finder/: README.md  metadata.json  plan.json
workflows/certifications/: registry.json
workflows/deterministic/luma_scraper/: README.md  input_schema.json  metadata.json  output_schema.json  workflow.py
workflows/entities/: registry.json
workflows/exploration_logs/docs_google_com/: 26cc471e.json  4a540bd4.json  9ec19dd0.json
(+10 files in other folders)
